# busca-dou

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 583a06ebea3b_initial_schema.py  a1b2c3d4e5f6_add_pgvector_embedding.py  c3d4e5f6a7b8_add_users_table.py
src/api/v1/: deps.py  schemas.py
src/api/v1/routes/: admin.py  ingest.py  pdfs.py  publications.py  sources.py
src/app/: config.py  database.py  main.py
src/models/: __init__.py  api_key.py  publication.py  source.py  user.py
src/parsers/: base.py  pdf_parser.py
src/scrapers/: base.py  ioerj.py
src/services/: ai.py  auth.py  db.py  ingestion.py  storage.py
src/templates/: base.html  detail.html  search.html
src/templates/auth/: dashboard.html  login.html  signup.html
src/templates/partials/: results.html
src/web/: auth_routes.py  routes.py
tests/: test_admin.py  test_auth.py  test_health.py  test_ingest.py  test_parser.py  test_publications.py  test_web.py
